[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yamlconfig"
version = "0.1.0"
authors = [
  { name="Stefano Furin", email="furins@gmail.com" },
]
description = "A package to load configurations stored as YAML files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML ~= 6.0',
 ]

[project.urls]
"Homepage" = "https://github.com/furins/yamlconfig"
"Bug Tracker" = "https://github.com/furins/yamlconfig/issues"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version",
    # "cargo.toml:^version",
    # "package.json:\"version\":"
]
